Вариант итоговой сетки главной страници

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </section>
         </div>
       </section>
-      <section class="top-products">
+      <section class="top-products centering-block">
         <header class="top-products__head-block">
           <h2 class="top-products__title">Популярные товары:</h2>
           <a class="top-products__link button" href="#">Все популярные товары</a>
@@ -157,94 +157,98 @@
           </li>
         </ul>
       </section>
-      <section class="top-makers">
+      <section class="top-makers centering-block">
         <header class="top-makers__head-block">
           <h2 class="top-makers__title">Популярные Производители:</h2>
           <a class="top-makers__link button" href="#">Все производители</a>
-          <ul class="top-makers__list">
-            <li class="top-makers__item">
-              <a class="top-makers__item-link">
-                <img src="img/manufacturer-bosch.png" width="188" height="77" alt="Производитель Bosch">
-              </a>
-            </li>
-            <li class="top-makers__item">
-              <a class="top-makers__item-link">
-                <img src="img/manufacturer-makita.png" width="188" height="77" alt="Производитель Makita">
-              </a>
-            </li>
-            <li class="top-makers__item">
-              <a class="top-makers__item-link">
-                <img src="img/manufacturer-dewalt.png" width="188" height="77" alt="Производитель DeWalt">
-              </a>
-            </li>
-            <li class="top-makers__item">
-              <a class="top-makers__item-link">
-                <img src="img/manufacturer-interskol.png" width="188" height="77" alt="Производитель Интерскол">
-              </a>
-            </li>
-            <li class="top-makers__item">
-              <a class="top-makers__item-link">
-                <img src="img/manufacturer-hitachi.png" width="188" height="76" alt="Производитель Hitachi">
-              </a>
-            </li>
-            <li class="top-makers__item">
-              <a class="top-makers__item-link">
-                <img src="img/manufacturer-lg.png" width="188" height="76" alt="Производитель LG">
-              </a>
-            </li>
-            <li class="top-makers__item">
-              <a class="top-makers__item-link">
-                <img src="img/manufacturer-aeg.png" width="188" height="76" alt="Производитель AEG Power Solutions">
-              </a>
-            </li>
-            <li class="top-makers__item">
-              <a class="top-makers__item-link">
-                <img src="img/manufacturer-metabo.png" width="188" height="76" alt="Производитель Metabo">
-              </a>
-            </li>
-          </ul>
         </header>
+        <ul class="top-makers__list">
+          <li class="top-makers__item">
+            <a class="top-makers__item-link">
+              <img src="img/manufacturer-bosch.png" width="188" height="77" alt="Производитель Bosch">
+            </a>
+          </li>
+          <li class="top-makers__item">
+            <a class="top-makers__item-link">
+              <img src="img/manufacturer-makita.png" width="188" height="77" alt="Производитель Makita">
+            </a>
+          </li>
+          <li class="top-makers__item">
+            <a class="top-makers__item-link">
+              <img src="img/manufacturer-dewalt.png" width="188" height="77" alt="Производитель DeWalt">
+            </a>
+          </li>
+          <li class="top-makers__item">
+            <a class="top-makers__item-link">
+              <img src="img/manufacturer-interskol.png" width="188" height="77" alt="Производитель Интерскол">
+            </a>
+          </li>
+          <li class="top-makers__item">
+            <a class="top-makers__item-link">
+              <img src="img/manufacturer-hitachi.png" width="188" height="76" alt="Производитель Hitachi">
+            </a>
+          </li>
+          <li class="top-makers__item">
+            <a class="top-makers__item-link">
+              <img src="img/manufacturer-lg.png" width="188" height="76" alt="Производитель LG">
+            </a>
+          </li>
+          <li class="top-makers__item">
+            <a class="top-makers__item-link">
+              <img src="img/manufacturer-aeg.png" width="188" height="76" alt="Производитель AEG Power Solutions">
+            </a>
+          </li>
+          <li class="top-makers__item">
+            <a class="top-makers__item-link">
+              <img src="img/manufacturer-metabo.png" width="188" height="76" alt="Производитель Metabo">
+            </a>
+          </li>
+        </ul>
       </section>
       <section class="services">
-        <header class="services__head-block">
-          <h2 class="services__head-title">Сервисы</h2>
-          <p class="services__head-description">Хороший интернет-магазин отличается от плохого не только ценами!
-            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        </header>
-        <ul class="services__list">
-          <li class="services__item">Доставка</li>
-          <li class="services__item">Гарантия</li>
-          <li class="services__item">Кредит</li>
-        </ul>
-        <div class="services__list-description">
-          <div class="services__list-description--delivery">
-            <h3 class="services__item-title">Доставка</h3>
-            <p class="services__item-description">
-              Мы с удовольствием доставим ваш товар прямо
-              к вашему подъезду совершенно бесплатно!
-              Ведь мы неплохо заработаем,
-              поднимая его на ваш этаж!
-            </p>
-          </div>
-          <div class="services__list-description--guarantee">
-            <h3 class="services__item-title">Гарантия</h3>
-            <p class="services__item-description">
-              Если купленный у нас товар поломается или заискрит,
-              а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
-              Дом уж восстановите как-нибудь сами.
-            </p>
-          </div>
-          <div class="services__list-description--credit">
-            <h3 class="services__item-title">Кредит</h3>
-            <p class="services__item-description">
-                Залезть в долговую яму стало проще!
-                Кредитные консультанты придут вам на помощь.
-            </p>
-            <a class="services__list-description--credit-link button" href="#">Отправить заявку</a>
+        <div class="centering-block">
+          <header class="services__head-block">
+            <h2 class="services__head-title">Сервисы</h2>
+            <p class="services__head-description">Хороший интернет-магазин отличается от плохого не только ценами!
+              Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+          </header>
+          <div class="services__main-content">
+            <ul class="services__list">
+              <li class="services__item">Доставка</li>
+              <li class="services__item">Гарантия</li>
+              <li class="services__item">Кредит</li>
+            </ul>
+            <div class="services__list-description">
+              <div class="services__description-item services__description-item--delivery">
+                <h3 class="services__item-title">Доставка</h3>
+                <p class="services__item-description">
+                  Мы с удовольствием доставим ваш товар прямо
+                  к вашему подъезду совершенно бесплатно!
+                  Ведь мы неплохо заработаем,
+                  поднимая его на ваш этаж!
+                </p>
+              </div>
+              <div class="services__description-item services__description-item--guarantee">
+                <h3 class="services__item-title">Гарантия</h3>
+                <p class="services__item-description">
+                  Если купленный у нас товар поломается или заискрит,
+                  а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
+                  Дом уж восстановите как-нибудь сами.
+                </p>
+              </div>
+              <div class="services__description-item services__description-item--credit">
+                <h3 class="services__item-title">Кредит</h3>
+                <p class="services__item-description">
+                  Залезть в долговую яму стало проще!
+                  Кредитные консультанты придут вам на помощь.
+                </p>
+                <a class="services__list-description--credit-link button" href="#">Отправить заявку</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
-      <article class="about-shop">
+      <article class="about-shop centering-block">
         <h2 class="visually-hidden">Пару слов о нас</h2>
         <section class="company-description about-shop__company-description">
           <h3 class="company-description__title">Компания «Техномарт»</h3>
@@ -281,74 +285,80 @@
     </main>
     <footer class="main-footer">
       <div class="main-footer__top-column">
-        <div class="main-footer__logo-block">
-          <a class="main-footer__logo-link">Техномарт</a>
+        <div class="centering-block centering-block--footer-top">
+          <div class="main-footer__logo-block">
+            <a class="main-footer__logo-link">Техномарт</a>
+          </div>
+          <nav class="footer-navigation main-footer__footer-navigation">
+            <ul class="footer-navigation__list">
+              <li class="footer-navigation__item">
+                <a class="footer-navigation__link" href="#">Компания</a>
+              </li>
+              <li class="footer-navigation__item">
+                <a class="footer-navigation__link" href="#">Новости</a>
+              </li>
+              <li class="footer-navigation__item">
+                <a class="footer-navigation__link" href="#">Каталог</a>
+              </li>
+              <li class="footer-navigation__item">
+                <a class="footer-navigation__link" href="#">Доставка</a>
+              </li>
+              <li class="footer-navigation__item">
+                <a class="footer-navigation__link" href="#">Контакты</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <nav class="footer-navigation main-footer__footer-navigation">
-          <ul class="footer-navigation__list">
-            <li class="footer-navigation__item">
-              <a class="footer-navigation__link" href="#">Компания</a>
-            </li>
-            <li class="footer-navigation__item">
-              <a class="footer-navigation__link" href="#">Новости</a>
-            </li>
-            <li class="footer-navigation__item">
-              <a class="footer-navigation__link" href="#">Каталог</a>
-            </li>
-            <li class="footer-navigation__item">
-              <a class="footer-navigation__link" href="#">Доставка</a>
-            </li>
-            <li class="footer-navigation__item">
-              <a class="footer-navigation__link" href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
       </div>
       <div class="main-footer__middle-column">
-        <p class="main-footer__office-location">
+        <div class="centering-block centering-block--footer-middle">
+          <p class="main-footer__office-location">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             +7 (812) 555-05-55
-        </p>
-        <ul class="main-footer__product-navigation">
-          <li class="main-footer__navigation-item">
-            <a class="main-footer__navigation-link" href="#">Материалы</a>
-          </li>
-          <li class="main-footer__navigation-item">
-            <a class="main-footer__navigation-link" href="#">Техника</a>
-          </li>
-          <li class="main-footer__navigation-item">
-            <a class="main-footer__navigation-link" href="#">Инструмент</a>
-          </li>
-          <li class="main-footer__navigation-item">
-            <a class="main-footer__navigation-link" href="#">Спецпредложения</a>
-          </li>
-        </ul>
+          </p>
+          <ul class="main-footer__product-navigation">
+            <li class="main-footer__navigation-item">
+              <a class="main-footer__navigation-link" href="#">Материалы</a>
+            </li>
+            <li class="main-footer__navigation-item">
+              <a class="main-footer__navigation-link" href="#">Техника</a>
+            </li>
+            <li class="main-footer__navigation-item">
+              <a class="main-footer__navigation-link" href="#">Инструмент</a>
+            </li>
+            <li class="main-footer__navigation-item">
+              <a class="main-footer__navigation-link" href="#">Спецпредложения</a>
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="main-footer__bottom-column">
-        <p class="main-footer__copyright">
+        <div class="centering-block centering-block--footer-bottom">
+          <p class="main-footer__copyright">
             © 2010–2019 Компания «Техномарт»
             Все права защищены
-        </p>
-        <ul class="main-footer__social-list">
-          <li class="main-footer__social-item">
-            <a class="main-footer__social-link main-footer__social-link--vk" href="#">Наша группа в контакте</a>
-          </li>
-          <li class="main-footer__social-item">
-            <a class="main-footer__social-link main-footer__social-link--facebook" href="#">Наша группа в фейсбуке</a>
-          </li>
-          <li class="main-footer__social-item">
-            <a class="main-footer__social-link main-footer__social-link--instagram" href="#">Наша группа в инстаграме</a>
-          </li>
-        </ul>
-        <div class="main-footer__developers">
-          <p class="main-footer__developers-feedback">
+          </p>
+          <ul class="main-footer__social-list">
+            <li class="main-footer__social-item">
+              <a class="main-footer__social-link main-footer__social-link--vk" href="#">Наша группа в контакте</a>
+            </li>
+            <li class="main-footer__social-item">
+              <a class="main-footer__social-link main-footer__social-link--facebook" href="#">Наша группа в фейсбуке</a>
+            </li>
+            <li class="main-footer__social-item">
+              <a class="main-footer__social-link main-footer__social-link--instagram" href="#">Наша группа в инстаграме</a>
+            </li>
+          </ul>
+          <div class="main-footer__developers">
+            <p class="main-footer__developers-feedback">
               Обратная связь:
               <a class="main-footer__developer-name" href="#">mail@htmlacademy.ru</a>
-          </p>
-          <p class="main-footer__developers-cutaway">
+            </p>
+            <p class="main-footer__developers-cutaway">
               Разработано —
               <a class="main-footer__developer-name" href="#">htmlacademy.ru</a>
-          </p>
+            </p>
+          </div>
         </div>
       </div>
     </footer>
