Задание размеров логотипу магазина

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="main-header__top-column">
-        <div class="centering-block">
+        <div class="centering-block centering-block--header-top">
           <div class="main-header__logo-block">
             <a class="main-header__logo-link">Техномарт</a>
           </div>
