--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           </div>
           <div class="main-header__search-block">
             <input class="main-header__search-field" type="search" placeholder="Поиск">
+            <svg class="main-header__search-logo" width="17" height="17"><path class="main-header__search-logo-figure" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+            </svg>
           </div>
           <div class="main-header__bookmarks-block">
             <p class="main-header__bookmarks-text">Закладки <span class="main-header__bookmarks-counter">0</span></p>
