Выравнивание по пикселю средней колонки шапки

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   <body>
     <header class="main-header">
       <div class="main-header__middle-column">
-        <div class="centering-block">
-          <h1 class="main-header__page-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <div class="centering-block centering-block--header-middle">
+          <h1 class="main-header__page-title">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
           <div class="main-header__header-feedback header-feedback">
-            <span class="header-feedback__phone-number">+7 (812) 555-05-55</span>
+            <div class="header-feedback__phone-block">
+              <span class="header-feedback__phone-number">+7 (812) 555-05-55</span>
+            </div>
             <p class="header-feedback__adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <ul class="main-header__user-navigation">
             <li class="main-header__user-navigation-item">
-              <a class="main-header__user-navigation-link" href="#">Войти</a>
+              <a class="main-header__user-navigation-link main-header__user-navigation-link--enter" href="#">Войти</a>
             </li>
             <li class="main-header__user-navigation-item">
-              <a class="main-header__user-navigation-link" href="#">Регистрация</a>
+              <a class="main-header__user-navigation-link main-header__user-navigation-link--user-registration" href="#">Регистрация</a>
             </li>
           </ul>
         </div>
