Выравнивание слайдера по пикселю

--- a/index.html
+++ b/index.html
@@ -99,16 +99,20 @@
               <div class="product-slider__perforators-slide">
                 <h4 class="product-slider__slide-title">Перфораторы</h4>
                 <p class="product-slider__slide-slogan">Настоящие мужские игрушки</p>
-                <img src="img/perforator-slide.jpg" width="620" height="226" alt="Изображение строителя с перфоратором">
+                <img class="product-slider__slide-image"src="img/perforator-slide.jpg" width="620" height="226" alt="Изображение строителя с перфоратором">
               </div>
               <div class="product-slider__drills-slide">
                 <h4 class="product-slider__slide-title">Дрели</h4>
                 <p class="product-slider__slide-slogan">Соседям на радость!</p>
-                <img src="img/drill-slide.jpg" width="620" height="266" alt="Изображение строителя с дрелью">
+                <img class="product-slider__slide-image" src="img/drill-slide.jpg" width="620" height="266" alt="Изображение строителя с дрелью">
               </div>
               <div class="product-slider__buttons-block">
-                <button class="product-slider__button-prev" type="button">Предыдущий слайд</button>
-                <button class="product-slider__button-next" type="button">Следующий слайд</button>
+                <button class="product-slider__button product-slider__button--prev" type="button">
+                  <span class="visually-hidden">Предыдущий слайд</span>
+                </button>
+                <button class="product-slider__button product-slider__button--next" type="button">
+                  <span class="visually-hidden">Следующий слайд</span>
+                </button>
               </div>
               <a class="product-slider__slide-link button" href="#">Открыть каталог</a>
               <div class="product-slider__toggle-block">
